# Bookstore_FastApi_REST

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: cdb0061c6c97_second_revision.py  d793556bf26b_first_revision.py
app/: gen.py  main.py
app/api/v1/: __init__.py  store.py  user.py
app/core/: config.py  security.py
app/crud/: auth_logic.py  author_category_logic.py  book_logic.py  order_logic.py  store_logic.py  user_logic.py
app/database/: db.py  dependb.py
app/models/: __init__.py  order_m.py  store.py  store_m.py  user.py  user_m.py
app/routers/: __init__.py  authentication_r.py  author_r.py  book_r.py  category_r.py  order_r.py  store_r.py  user_r.py
app/schemas/: auth_s.py  schemas.py  store_s.py  token_s.py  user_order_s.py
bookstore_fastapi/: config.py  db.py  main.py  models.py  schemas.py
tests/: conftest.py  test_bookstore_fastapi.py
tests/test_core/: test_security.py
tests/test_crud/: test_auth_logic.py  test_author_category_logic.py  test_book_logic.py  test_order_logic.py  test_user_logic.py
